Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* pkgcore now ignores ebuild postrm exit status- it logs failures, but there
  isn't really anything that can be done at that stage (everything is already
  unmerged after all).

* fixed pkgcore.fs.livefs.iter_scan to support a path pointing to a
  nondirectory.

* fixed a validation bug in installed pkgs virtual cache staleness detection-
  this accounted for a surprisingly hefty ~25% for simple pquery invocations.

* USE is now locked an intersection of the pkgs IUSE, with forced flags
  (things like arch, userland, prefix, etc) added on.  Mild speed up from
  dealing with a reduced set, more importantly portage switched to controlled
  USE here, so we can force it finally.

* USE collapsing now should match portage behaviour.  Essentially now,
  pkg IUSE + profile overrides + make.conf overrides + user config package.use
  overrides.  Previous behaviour didn't get edge cases correct.

* USE_EXPAND default iuse is now fully overridden if the target USE_EXPAND
  groupping is defined in configuration.  Mostly relevant for qemu-kvm.

* data_source.get_(text|bytes)_fileobj invocations now require writable=True
  if you wish to mutate the data source.  Via making the intention explicit,
  consumers will get just what they need- a 3x speed up for
  pquery --attr environment is from that internal optimization alone.

* commandline.OptionParser now does a shallow copy of all items in
  standard_options_list; this protects against class/instance level cycles
  inherent in optparse.OptionParser's design.

* pkgcore.interfaces.data_source moved to snakeoil.data_source.

* pkgcore.chksum moved to snakeoil.chksum.  A compatibility shim was left in
  for pkgcore-checks, which will be removed in 0.7 of pkgcore.


pkgcore 0.5.11.7: June 20th, 2010

* use_enable/use_with; make use_enable/use_with 3rd arg form match pms in eapi4,