@@ -1,4 +1,4 @@
 #!/bin/bash
 # Copyright 2010 Brian Harring <ferringb@gmail.com>
 
-source "${PKGCORE_BIN_PATH}/"/eapi/2.bash
+source "${PKGCORE_BIN_PATH}/"/eapi/2.bash >&2
